cip-macros/tests/ui/cip_instance_missing_class_id.stderr
error: A struct must have a field 'class_id: ClassCode' to use #[derive(CipInstance)]
  --> tests/ui/cip_instance_missing_class_id.rs:15:8
   |
15 | struct MyInstance {
   |        ^^^^^^^^^^

error[E0615]: attempted to take value of method `class_id` on type `&MyInstance`
  --> tests/ui/cip_instance_missing_class_id.rs:14:10
   |
14 | #[derive(CipInstance)]
   |          ^^^^^^^^^^^ method, not a field
   |
   = note: this error originates in the derive macro `CipInstance` (in Nightly builds, run with -Z macro-backtrace for more info)
